fix: correção nas lógicas e end-points