@@ -1,9 +1,14 @@
 package com.marcaaiback.service;
 
+import com.marcaaiback.exception.EntidadeNaoEncontradaException;
+import com.marcaaiback.exception.OperacaoNaoPermitidaException;
+import com.marcaaiback.model.dto.agendamento.AgendamentoResumoResponse;
 import com.marcaaiback.model.dto.horariodisponivel.HorarioDisponivelRequest;
 import com.marcaaiback.model.dto.horariodisponivel.HorarioDisponivelResponse;
 import com.marcaaiback.model.entity.Admin;
+import com.marcaaiback.model.entity.Agendamento;
 import com.marcaaiback.model.entity.HorarioDisponivel;
+import com.marcaaiback.model.enuns.StatusAgendamento;
 import com.marcaaiback.repository.HorarioDisponivelRepository;
 import com.marcaaiback.validator.HorarioDisponivelValidator;
 import jakarta.persistence.EntityNotFoundException;
@@ -11,6 +16,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -31,7 +40,6 @@ public class HorarioDisponivelService {
         horarioValidator.validarAntecedencia(request.getData());
         horarioValidator.validarConflitoHorario(request.getData(), request.getHoraInicio(), request.getHoraFim());
 
-
         Admin admin = adminService.buscarEntidade();
 
         HorarioDisponivel horario = new HorarioDisponivel();
@@ -49,29 +57,100 @@ public class HorarioDisponivelService {
     }
 
     public List<HorarioDisponivelResponse> listarPorData(LocalDate data) {
-        return horarioDisponivelRepository.findByData(data)
-                .stream()
+
+        List<HorarioDisponivel> horarios = horarioDisponivelRepository.findByDataWithAgendamentos(data);
+
+        if (horarios.isEmpty()) {
+            throw new EntidadeNaoEncontradaException("Nenhum horário disponível encontrado para essa data.");
+        }
+
+        return horarios.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<HorarioDisponivelResponse> listarDisponiveisPorData(LocalDate data) {
-        return horarioDisponivelRepository.findByDataAndDisponivel(data, true)
-                .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+
+        List<HorarioDisponivel> horarios = horarioDisponivelRepository.findByDataWithAgendamentos(data);
+
+        if (horarios.isEmpty()) {
+            throw new EntidadeNaoEncontradaException("Nenhum horário encontrado para essa data.");
+        }
+
+        List<HorarioDisponivelResponse> resultado = new ArrayList<>();
+
+        for (HorarioDisponivel horario : horarios) {
+
+            List<Agendamento> agendamentos = horario.getAgendamentos().stream()
+                    .filter(a -> a.getStatusAgendamento() == StatusAgendamento.AGENDADO
+                            || a.getStatusAgendamento() == StatusAgendamento.CONFIRMADO)
+                    .sorted(Comparator.comparing(Agendamento::getHoraInicio))
+                    .toList();
+
+            LocalTime inicioLivre = horario.getHoraInicio();
+
+            for (Agendamento agendamento : agendamentos) {
+
+                LocalTime inicioAg = agendamento.getHoraInicio();
+                LocalTime fimAg = agendamento.getHoraFim();
+
+                if (inicioLivre.isBefore(inicioAg)) {
+
+                    long minutos = Duration.between(inicioLivre, inicioAg).toMinutes();
+
+                    if (minutos >= 30) {
+                        resultado.add(criarIntervaloResponse(horario, inicioLivre, inicioAg));
+                    }
+                }
+
+                if (inicioLivre.isBefore(fimAg)) {
+                    inicioLivre = fimAg;
+                }
+            }
+
+            if (inicioLivre.isBefore(horario.getHoraFim())) {
+
+                long minutos = Duration.between(inicioLivre, horario.getHoraFim()).toMinutes();
+
+                if (minutos >= 30) {
+                    resultado.add(criarIntervaloResponse(horario, inicioLivre, horario.getHoraFim()));
+                }
+            }
+        }
+
+        if (resultado.isEmpty()) {
+            throw new EntidadeNaoEncontradaException("Nenhum horário disponível para essa data.");
+        }
+
+        return resultado;
     }
 
     public HorarioDisponivelResponse alterarDisponibilidade(Long id, HorarioDisponivelRequest request) {
+
         HorarioDisponivel horario = buscarEntidade(id);
 
-        // validações centralizadas
-        horarioValidator.validarAtualizacao(horario);
+        // validações básicas
         horarioValidator.validarDuplicidadeAtualizacao(id, request.getData(), request.getHoraInicio());
         horarioValidator.validarIntervalo(request.getHoraInicio(), request.getHoraFim());
         horarioValidator.validarHorarioPassado(request.getData(), request.getHoraInicio());
         horarioValidator.validarAntecedencia(request.getData());
         horarioValidator.validarConflitoAtualizacao(id, request.getData(), request.getHoraInicio(), request.getHoraFim());
+
+        // 🔥 NOVA VALIDAÇÃO INTELIGENTE
+        for (Agendamento a : horario.getAgendamentos()) {
+
+            if (a.getStatusAgendamento() == StatusAgendamento.AGENDADO ||
+                    a.getStatusAgendamento() == StatusAgendamento.CONFIRMADO) {
+
+                if (a.getHoraInicio().isBefore(request.getHoraInicio()) ||
+                        a.getHoraFim().isAfter(request.getHoraFim())) {
+
+                    throw new OperacaoNaoPermitidaException(
+                            "Não é possível alterar o horário pois existem agendamentos fora do novo intervalo."
+                    );
+                }
+            }
+        }
 
         horario.setData(request.getData());
         horario.setHoraInicio(request.getHoraInicio());
@@ -107,7 +186,38 @@ public class HorarioDisponivelService {
         response.setHoraInicio(horario.getHoraInicio());
         response.setHoraFim(horario.getHoraFim());
         response.setDisponivel(horario.isDisponivel());
-        response.setAgendamentos(List.of()); // carregado separadamente se necessário
+
+        List<AgendamentoResumoResponse> agendamentos = horario.getAgendamentos() == null
+                ? List.of()
+                : horario.getAgendamentos().stream().map(a -> {
+            AgendamentoResumoResponse resumo = new AgendamentoResumoResponse();
+            resumo.setId(a.getId());
+            resumo.setData(a.getData());
+            resumo.setHoraInicio(a.getHoraInicio());
+            resumo.setHoraFim(a.getHoraFim());
+            resumo.setStatusAgendamento(a.getStatusAgendamento());
+            resumo.setServicoNome(a.getServico().getNome());
+            resumo.setClienteNome(a.getCliente().getNome());
+            return resumo;
+        }).collect(Collectors.toList());
+
+        response.setAgendamentos(agendamentos);
+        return response;
+    }
+
+    private HorarioDisponivelResponse criarIntervaloResponse(
+            HorarioDisponivel base,
+            LocalTime inicio,
+            LocalTime fim
+    ) {
+        HorarioDisponivelResponse response = new HorarioDisponivelResponse();
+
+        response.setData(base.getData());
+        response.setHoraInicio(inicio);
+        response.setHoraFim(fim);
+        response.setDisponivel(true);
+        response.setAgendamentos(List.of()); // aqui não precisa trazer agendamentos
+
         return response;
     }
 }
